[Silicon] Lucie's comments

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -5,13 +5,13 @@
 
 Semiconductor materials have a great advantage in many radiation
 detection applications. The main benefits are the high energy
-resolution due to the large number of carriers that are created by a
-given incident radiation, their compact sizes, fast timing and the
-effective thickness can be adapted to the requirements of the
-applications. Though, they show some limitations for smaller sizes and
-their performance can degrade from radiation induced damages. Silicon
-detectors are predominant for charge particle spectroscopy among
-semiconductor materials.
+resolution due to the large number of free charge carriers that are
+created by a given incident radiation, their compact sizes, fast
+timing, while the effective thickness can be adapted to the
+requirements of the applications. Though, they show some limitations
+for smaller sizes and their performance can degrade from radiation
+induced damages. Among semiconductor materials, silicon detectors are
+predominant for charged particle spectroscopy.
 
 In this chapter, we will review the basic properties of semiconductor
 material, charge generation in silicon and the transport of charge
@@ -105,7 +105,7 @@ constant and is \SI{5.34}{\angstrom} in silicon.
     gray. From~\cite{Spieler2005}.}\label{fig:SiliconDiamondLattice}
 \end{figure}
 
-In the periodic table, silicon is group 4 elements as it has four
+In the periodic table, silicon is a group four element as it has four
 valence electrons and which combine with four neighbours to build
 covalent bonds and close the outer shell.  At 0~K, no electrical
 conduction is possible since all the electrons fill completely the
@@ -139,10 +139,10 @@ ionisation probability is increased and mobile electrons are
 introduced into the conduction band.
 
 In \textit{p-type doping}, by introducing a group three atom into the
-silicon lattice, such as the boron, leaves one impurity valence
-electron. This type of dopant is called an acceptor: the dopant
-borrows an electron from a neighbouring atom and the holes can move
-freely throughout the crystal.
+silicon lattice such as the boron, one impurity valence electron is
+left. This type of dopant is called an acceptor: the dopant borrows an
+electron from a neighbouring atom and the holes can move freely
+throughout the crystal.
  
 %% --------------------------------------------- %%
 \section{Charge generation and recombination in silicon}
@@ -160,8 +160,8 @@ interaction of charged particles with silicon and can be
 detected. Part of the absorbed energy generates electron-hole pairs
 through scattering processes with the shell electrons of silicon and
 can be collected by the readout electronics. The number of
-electron-hole pairs produced as well as the total energy loss of the
-particle in the detector are stochastic quantities.
+electron-hole pairs produced, as well as the total energy loss of the
+particle in the detector, are stochastic quantities.
 
 The energy loss along the particle track is described by the
 Bethe-Bloch formula~\cite{Beringer:1900zz}:
@@ -185,7 +185,7 @@ as minimum ionising particles (MIPs).
 \subsection{Energy-loss spectrum in silicon}
 Ionisation is also subject to statistical fluctuations and
 \cref{eq:BetheBloch} gives its average value. It can be described by a
-probability density function called \textit{straggling functions} and
+probability density function called \textit{straggling function} and
 characterised by the most probable energy loss ($\Delta_{p}$) and
 full-width-at-half-maximum ($w$). \cref{fig:LandauDistribution} shows
 examples of this distribution in thin sensors. If a particle is not
@@ -202,16 +202,16 @@ equation (c.f. \cref{eq:BetheBloch}) is ill-defined experimentally and
 not used for applications where the energy loss for single particles
 is described.
 
-The fluctuations around the $\Delta_{p}$ increase for thinner sensors
-and should be taken into account for the design of the dynamic range
-of the readout electronics.
+The fluctuations around $\Delta_{p}$ increase for thinner sensors and
+should be taken into account for the design of the dynamic range of
+the readout electronics.
 
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=0.7\textwidth, page=14, trim = 50mm 160mm
     40mm 20mm, clip]{Articles/rpp2009-rev-passage-particles-matter.pdf}
-  \caption{Straggling functions in silicon for 500 MeV pions,
+  \caption{Straggling function in silicon for 500 MeV pions,
     normalized to unity at the most probable value $\Delta_{p}$. $w$
     is the full-width-at-half-maximum~\cite{Beringer:1900zz}.}
   \label{fig:LandauDistribution}
@@ -296,9 +296,9 @@ particles with charge $\pm1e$ and $\beta\gamma>500$ as listed in
   \end{equation}
 \end{itemize}
 
-\cref{tab:EdepForDifferentThickness} summarises the $\Delta_{p}$
-and $w$ for detectors thicknesses at our disposal and tested during
-test beams with the results presented in the following chapters.
+\cref{tab:EdepForDifferentThickness} summarises the $\Delta_{p}$ and
+$w$ for detectors thicknesses at our disposal and tested at test beams
+with the results presented in the following chapters.
 
 \begin{table}[htbp]
   \centering
@@ -340,7 +340,8 @@ where the angle $\theta$ is in radians, the particle momentum $p$ in
 the absorption medium in units of the radiation length.
 
 In high-energy physics applications, the material budget of pixel
-detectors is minimised in order to have the least scattering angles possible.
+detectors is minimised in order to have the smallest scattering angles
+possible.
 
 %% --------------------------------------------- %%
 %% \subsection{\textsc{Geant4}}\label{sec:Silicon_Geant4}
