--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -356,16 +356,15 @@ detectors is sketched.
 
 \subsection{Transport of charge carriers}
 In silicon detectors, the movement of the charge carriers (holes and
-electrons) lead to signal pulses in the electrical contacts which can
-be detected by the readout electronics. 
-In the absence of any external electric field, free charge carriers move
-randomly and are scattered due to their collisions with the crystal
-lattice or other impurities. On average, in equilibrium conditions,
-the traveled distance averaged over charges is zero. In addition to
-the statistical movement, two other mechanisms can affect the
-transport of charge carriers: diffusion (due to a gradient in
-concentration) and drift (in the presence of an external electric
-field).
+electrons) leads to signal pulses in the electrical contacts which can
+be detected by the readout electronics.  In the absence of any
+external electric field, free charge carriers move randomly and are
+scattered due to their collisions with the crystal lattice or other
+impurities. On average, in equilibrium conditions, the traveled
+distance averaged over charges is zero. In addition to the statistical
+movement, two other mechanisms can affect the transport of charge
+carriers: diffusion (due to a gradient in concentration) and drift (in
+the presence of an external electric field).
 
 The diffusion implies that a carrier is more probable to move from a
 high-concentration region to a low-concentration region. The diffusion
