--- a/include/Software.tex
+++ b/include/Software.tex
@@ -6,7 +6,7 @@
 Simulation tools have a crucial role in the development and also
 understanding of the performance of semiconductor devices. The
 simulations are validated with the data and used to predict the
-performance of small-pitch pixels where data is unavailable. 
+performance of small-pitch pixels for which data is not yet available.
 
 This chapter describes the simulation tools used to understand the
 performance of Timepix3 devices. The reconstruction software, used for
