[CLIC] small description of the accelerator

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -139,19 +139,27 @@ H$\nu_{e}\bar{\nu_{e}}$ mechanism dominates.
   \label{fig:corssSectionH125}
 \end{figure}
 
-The schematic layout of the CLIC accelerator complex at $3\,\tev$ is
-shown in \cref{fig:CLIC_accelerator}. The electron and positron beams
-are accelerated on a linear trajectory and collide in the central
-region (in the interaction point), where the CLIC detector is
-placed. At this stage, each linac is fed by a drive-beam generation
-complex.
+
+The CLIC accelerator uses copper cavities at room
+temperature. Klystrons connected to the cavities provide the RF power
+used by the acceleration cavities. The klystrons are not directly used
+to accelerate the main beam at CLIC since a large number of them would
+be needed and their efficiency would be too low. A two-beam
+acceleration scheme is used to reach the nominal collision energy.
+
+The schematic layout of the CLIC accelerator complex at
+$\sqrt{s}=3\,\tev$ is shown in \cref{fig:CLIC_accelerator}. The
+electron and positron beams are accelerated on a linear trajectory and
+collide in the central region (in the interaction point), where the
+CLIC detector is placed. At this stage, each linac is fed by a
+drive-beam generation complex.
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=\textwidth]{figures/CLIC/CLIC-layout2015pub.pdf}
   \caption{Schematic layout of the CLIC accelerator complex at
-    $3\,\tev$. At this stage, each linac is fed by a drive-beam
-    generation complex~\cite{Felzmann:2157041}.}
+    $\sqrt{s}=3\,\tev$. At this stage, each linac is fed by a
+    drive-beam generation complex~\cite{Felzmann:2157041}.}
   \label{fig:CLIC_accelerator}
 \end{figure}
 
