[CLIC] implementing Lucie's comments

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -145,7 +145,13 @@ temperature. Klystrons connected to the cavities provide the RF power
 used by the acceleration cavities. The klystrons are not directly used
 to accelerate the main beam at CLIC since a large number of them would
 be needed and their efficiency would be too low. A two-beam
-acceleration scheme is used to reach the nominal collision energy.
+acceleration scheme is used to reach the nominal collision energy. A
+drive beam with a low energy of $2.4\,\gev$ and a high current of
+100~A is used to transfer the energy of the klystrons to the main beam
+which has a lower current and higher energy. The drive beam is
+decelerated over a distance of 878~m and the extracted energy is
+provided to the main beam with a series of Power Extraction and
+Transfer Systems (PETSs).
 
 The schematic layout of the CLIC accelerator complex at
 $\sqrt{s}=3\,\tev$ is shown in \cref{fig:CLIC_accelerator}. The
