[CLIC] two-beam acceleration

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -83,7 +83,9 @@
 \newcommand{\gev}{\ensuremath{\mathrm{\,Ge\kern -0.1em V}}\xspace}
 \newcommand{\tev}{\ensuremath{\mathrm{\,Te\kern -0.1em V}}\xspace}
 \newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
+\newcommand{\kilohertz}{\ensuremath{\mathrm{kHz}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
+\newcommand{\gigahertz}{\ensuremath{\mathrm{GHz}}\xspace}
 \newcommand{\cmsquared}{\ensuremath{\text{cm}^{2}}\xspace}
 \newcommand{\inversecmcubic}{\ensuremath{\text{cm}^{-3}}\xspace}
 \newcommand{\inversecmsquared}{\ensuremath{\text{cm}^{-2}}\xspace}
