[CLIC] more description on the detector

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -219,10 +219,34 @@ achieved with the very small bunch sizes.
 \section{Requirements for the CLIC vertex-detector}
 \label{sec:VXD_requirements}
 
-A detector concept covering the CLIC physics potential is under
-development in simulations as shown in
-\cref{fig:CLIC_detector_concept}. The physics goals set requirements
-on the detector design.
+To cover the CLIC physics potential, a detector concept using
+cutting-edge technology is under development. The physics goals, set
+challenging requirements on the design of the detector. Simulation
+tools are crucial for the design, development as well as the
+optimisation of the detector model. 
+
+The experimental conditions due to the beam and backgrounds effect set
+the most demanding requirements at the highest collision
+energy. Therefore, the detector model is focused mainly on the
+$3\,\tev$ CLIC.
+
+\cref{fig:CLIC_detector_concept} shows the CLIC detector model as
+implemented in simulations. The overall length and height of the
+detector are 11.4~m and 12.9~m respectively. It is composed of several
+sub detectors. The vertex detector is the closest to the IP and
+consists of pixelated silicon detectors. It is followed by the main
+tracker which is as also a silicon-based detector. After the tracking
+systems, fine grained calorimeters are used: the silicon-tungsten
+electromagnetic calorimeter (ECAL) and the hadronic calorimeter
+(HCAL). The ECAL is used for the measurement of the energy of
+particles interacting via the electromagnetic interactions and the
+HCAL for measuring particles interacting via the strong nuclear
+force. The superconducting coil surrounds the calorimeters to provide
+a magnetic field of 4~T to deflect the trajectory of charged particles
+and the tracking detectors use the radius of curvature to measure the
+momenta of charged particles. Finally the iron yoke surrounds the
+whole detector for the identification of the muons.
+
 
 \begin{figure}[htbp]
   \centering
